start ch6, expand on value initialization

--- a/cpp_notebook/primer/ch-01.md
+++ b/cpp_notebook/primer/ch-01.md
@@ -29,6 +29,7 @@
 	- first check logic!
 		- no logical difference when increments are isolated statements, but it sometimes matters when they're nested in other expressions.
 	- otherwise, prefix is generally more efficient.
+	- (update: check out ch4 for details)
 - eof is usually control-d on unix systems.
 
 
