--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -63,6 +63,11 @@
 			- defined outside any function body are initialized to zero.
 		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers
 			- for example, *std::string* default initializes to empty string no matter where it's defined.
+	- ***value initialization***
+		- *NOTE: i'm not sure about technical details about when value initialization happens, most information here is from other other chapters.
+		- generally happens when we only supply a size to something like a vector or array to be initialized.
+			- note that an array (built-in) will still be *default initialized* if we don't provide an initializer at all! value initialization happens for arrays when we add a list initializer; see [ch3](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35) for details.
+		-  the library implicitly creates a value-initialized element initializer for each element. (**zero for built-in types**, element-value-initialized array for built-in arrays(?), **default initializer for class types like string**)
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
@@ -202,13 +207,13 @@ const double *const pip = &pi; // const pointer to object of type const double
 - because pointers are objects, we can have a pointer that is itself const.
 - ***const pointers*** are pointers that can't change what they're pointing to after initialization. (same behavior as any const object)
 - **the fact that a pointer is itself const says nothing about whether we can use the pointer to change the underlying object.**
-- *top-level const* vs *low-level const*
+- ***top-level const*** vs ***low-level const***
 	- top-level const indicates that an object itself is const. it is ignored when we copy an object.
 	- low-level const indicates that a pointer or reference points/refers to a const (appears in the base type of compound types). 
 		- low-level const is never ignored.
 		- when we copy a reference/pointer, both operands must have the same low-level const qualification or the copied object (right side operand) must be able to convert to the left side's low-level const qualification.
 			- we can convert a low-level nonconst to a low-level const but not the other way around.
-			- note to self (idk if this is technically correct lol) think of low-level const as a restriction that we can add but not remove to make types match.
+			- note to self (idk if this is technically correct lol) think of low-level const as a restriction that we can add but not remove to make the right side match the type of the left side.
 	
 ***constant expressions*** (also see ch6)
 
@@ -249,13 +254,12 @@ const double *const pip = &pi; // const pointer to object of type const double
 - ***struct*** keyword to define classes.
 - need semicolon to close class definition.
 - the **preprocessor** runs before the compiler. 
-	- it replaces *#include* directives with the contents of the specified header and follows other directives as well.
-- in order to ensure that class definition is the same across files, classes are usually defined in **header** files. 
-	- whenever a header is updated, the source files that use that header must be recompiled to get the new or changed declarations.
-	- **header guards** used by the preprocessor protect against multiple inclusion.
-		- *#define* directive takes a name and defines that name as a preprocessor variable
-		- *#ifdef* and *#ifndef* test whether a given preprocessor variable has been defined or not
-		- *#endif* closes *#ifdef* or *#ifndef*
+	- it replaces *#include* directives with the contents of the specified *header* and follows other directives as well.
+	- **header guards** are used by the preprocessor to protect against multiple inclusion.
+		- *#define* directive takes a name and defines that name as a preprocessor variable.
+		- *#ifdef* and *#ifndef* test whether a given preprocessor variable has been defined or not.
+		- *#endif* closes *#ifdef* or *#ifndef*.
+- whenever a header is updated, the source files that use that header must be recompiled to get the new or changed declarations.
 		
 ~~~
 // Sales_data.h
@@ -279,3 +283,4 @@ struct Sales_data {
 - what does it mean to be a pointer "one location past the end of an object"
 	- answer: see iterators and array pointers (ch3)
 - if you bind a reference to const to a nonconst object, then change the nonconst object directly, does the reference to const also change when you next use it? my intuition says yes, but the temporary object concept says no.
+- not really sure about the details of initialization.
