--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -118,7 +118,8 @@ cout << punct_cnt << '\n';
 		- the most common way of using vector is to define an empty vector to which elements are added as their values become known at runtime.
 	- copy elements from another vector of the same type (using either direct or copy initialization like with strings)
 	- list initialize using { } curly braces (direct or copy initialization)
-	- direct initialize from a specified number of elements (with the option of providing a default initial value for all elements)
+	- direct initialize from a specified number of elements with each element value initialized.
+		- we also have the option of providing a default initial value for all elements.
 	- direct initialize from an array (using array pointers, see section below on arrays)
 ~~~
 // how i initialize a vector
@@ -217,7 +218,7 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 	- **arrays follow default initialization rules for built-in types (undefined if defined inside a function)**
 	- we can explicitly initialize array elements using list initialization.
 		- don't need to specify dimension.
-		- specifying a dimension greater than the number of initializers in the list makes remaining elements *value initialized*.
+		- specifying a dimension greater than the number of initializers in the list makes remaining elements value-initialized.
 	- character arrays can be initialized from a string literal.
 		- automatically adds the **null character '\0'** at the end of every string literal!
 	- **we cannot copy-initialize an array from another array or assign arrays to each other.**
@@ -225,13 +226,13 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 ~~~
 // how i initialize arrays
 T arr[] = {a, b, c};
-T arr[n] = {}; // zeroed array (value intialization)
+T arr[n] = {}; // zeroed array of n elements (elements are value initialized)
 ~~~
 
 - processing 
 	- similar to vectors and strings, with the exception that arrays are fixed size.
 	- *range for* and *subscript operator [ ]* both access elements of array.
-		- **use unsigned type *size_t* from the *cstddef* header to define variables used to subscript an array.**
+		- **normally use unsigned type *size_t* from the *cstddef* header to define variables used to subscript an array.**
 	- as with strings and vectors, **remember to check that subscripts are kept in range!**
 - pointers and arrays
 	- **the compiler automatically substitutes the name of an array with a pointer to its first element.**
@@ -244,7 +245,7 @@ T arr[n] = {}; // zeroed array (value intialization)
 - **pointer arithmetic**
 	- same operations as iterator arithmetic!
 		- result of subtracting two pointers is signed integral library type *ptrdiff_t*.
-	- the built-in subscript (on arrays only) can actually take negative values because of its underlying pointer arithmetic, but ignore this functionality for now!
+	- the built-in subscript (on arrays only) can actually take negative values because of its underlying pointer arithmetic, but ignore this functionality for now.
 - interfacing with old code or C
 	- C++ supports C functions for C-style character strings, but they are more prone to error and should not be used. 
 		- a C-style character string is a convention for storing a string in a character array with a null terminator. 
@@ -285,6 +286,5 @@ for (auto &row : myMatrix) {
 - refer to Primer for details on multidimensional array use.
 
 ## things to follow up on
-- my program compiles and runs without the #include directive for cctype. is it necessary/good practice to include it anyways?
-	- same for *string*
-	- answer - [include everything to guarantee functionality across different compilers](https://stackoverflow.com/questions/16506095/do-i-have-to-use-include-string-beside-iostream)
+- my program compiles and runs without the #include directive for *cctype* and *string*. is it necessary/good practice to include it anyways?
+	- answer - [include everything necessary to guarantee functionality across different compilers](https://stackoverflow.com/questions/16506095/do-i-have-to-use-include-string-beside-iostream)
