--- a/cpp_notebook/primer/ch-04.md
+++ b/cpp_notebook/primer/ch-04.md
@@ -27,8 +27,9 @@
 	- in assignments, the right-hand operand is converted to the type of the left-hand operand.
 	- in conditions, non*bool* expressions are converted to *bool*.
 	- arrays are automatically converted to pointers to the first element in the array
-	- a pointer / reference to *T* can be converted into a pointer / reference to *const T*
-		- the reverse conversion does not exist
+	- a pointer / reference to *T* can be converted into a pointer / reference to *const T*.
+		- the reverse conversion does not exist.
+		- [see top-level vs low-level const](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24)
 	- class types can define conversions
 		- for example, the iostream library defines a conversion from *istream* to *bool* (ch1).
 - **explicit conversions (casts)**
