--- a/cpp_notebook/primer/ch-05.md
+++ b/cpp_notebook/primer/ch-05.md
@@ -27,16 +27,16 @@
 	- we can use null statements for any of the three header statements.
 - **range for** (C++11)
 	- the right side of the header must be an expression that represents a sequence (braced initializer list, array, or any type that has *begin()* and *end()* members that return iterators, like vectors and strings).
-	- it must be possible to convert each element of the given sequence to the type of the iterating varaible (declared on the left side of the header).
+	- it must be possible to convert each element of the given sequence to the type of the iterating variable (declared on the left side of the header).
 		- use auto type specifier!
 		- loop variable must be a reference type if we want to write to the elements in the sequence.
 		- [**general summary of how to declare variable in range for loops**](https://stackoverflow.com/questions/15176104/c11-range-based-loop-get-item-by-value-or-reference-to-const)
 	- on each iteration, the control variable is defined and intialized by the next value in the sequence.
-	- we can't add elements to a container in a range for because the loop control is a cached *end()*.
+	- we can't add elements to a container in a range for because the loop control relies on a cached *end()* iterator.
 - jump statements
-- *break* terminates the nearest enclosing iteration or switch statement.
-- *continue* terminates the current iteration of the nearest enclosing loop and immediately begins the next iteration.
-- avoid *goto* lol
+	- *break* terminates the nearest enclosing iteration or switch statement.
+	- *continue* terminates the current iteration of the nearest enclosing loop and immediately begins the next iteration.
+	- avoid *goto* lol
 
 
 #### intro to exception handling
