clear up array/pointer relationship, finish arg passing

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -59,7 +59,7 @@
 		- braced lists of initializers can be used.
 		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (*int* type object being list-initialized with a *long double* initializer)
 	- ***default initialization***
-		- **without an explicit initializer, built-in type variables defined inside a function are uninitialized.** 
+		- **without an explicit initializer, built-in type variables defined inside a function are uninitialized (with undefined value).** 
 			- defined outside any function body are initialized to zero.
 		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers
 			- for example, *std::string* default initializes to empty string no matter where it's defined.
