--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -222,6 +222,7 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 	- character arrays can be initialized from a string literal.
 		- automatically adds the **null character '\0'** at the end of every string literal!
 	- **we cannot copy-initialize an array from another array or assign arrays to each other.**
+		- inherited from C and/or [array-to-pointer decay](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay)?
 	- we cannot initialize an array from a vector, but we can initialize a vector from an array (see in vector section).
 ~~~
 // how i initialize arrays
@@ -235,17 +236,17 @@ T arr[n] = {}; // zeroed array of n elements (elements are value initialized)
 		- **normally use unsigned type *size_t* from the *cstddef* header to define variables used to subscript an array.**
 	- as with strings and vectors, **remember to check that subscripts are kept in range!**
 - pointers and arrays
-	- **the compiler automatically substitutes the name of an array with a pointer to its first element.**
-		- if we had an array named *nums*, using the name *nums* actually gives us *&nums[0]*.
-		- this conversion does not happen when we use decltype.
-	- **pointers that address elements in an array support the same operations as *iterators* on vectors or strings**
-		- we can take the address of the nonexistent element one past the last element of an array to create something like the "off-the-end iterator".
-			- doing this directly is error-prone.
+	- **the compiler automatically converts the name of an array with a pointer to its first element in most expressions.**
+		- **note: keep in mind array names are not *just* pointers to their first element! (see [array-to-pointer decay](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay))**
+	- pointers that address elements in an array support the same operations as *iterators* on vectors or strings.
 		- the ***iterator* header** has functions ***begin(myArray)*** and ***end(myArray)*** that take an array as an argument and return the beginning and off-the-end pointers. (C++11)
+			- note: Primer doesn't say so explicitly, but i'm guessing the *begin* is necessary because we need a copy of the pointer to move (we can't just *move* the actual array) .
 - **pointer arithmetic**
-	- same operations as iterator arithmetic!
+	- same operations as iterator arithmetic
 		- result of subtracting two pointers is signed integral library type *ptrdiff_t*.
-	- the built-in subscript (on arrays only) can actually take negative values because of its underlying pointer arithmetic, but ignore this functionality for now.
+	- the *built-in* subscript operator [ ] actually operates on a pointer! (i assume the array name just decays to a pointer when the subscript operator is applied)
+		- *p[1]* is equivalent to *&ast;(p + 1)*
+		- subscript can take negative values because of its underlying pointer arithmetic.
 - interfacing with old code or C
 	- C++ supports C functions for C-style character strings, but they are more prone to error and should not be used. 
 		- a C-style character string is a convention for storing a string in a character array with a null terminator. 
@@ -288,3 +289,4 @@ for (auto &row : myMatrix) {
 ## things to follow up on
 - my program compiles and runs without the #include directive for *cctype* and *string*. is it necessary/good practice to include it anyways?
 	- answer - [include everything necessary to guarantee functionality across different compilers](https://stackoverflow.com/questions/16506095/do-i-have-to-use-include-string-beside-iostream)
+- Primer has a lot of things going for it, but i keep coming back to their section on arrays with questions. part of this might be because arrays are just hard to understand, but i think their treatment of arrays left out some important details (maybe they'll explain it later). overall i think i'm just going to stick with vectors (which might've been their goal lol).
