--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -56,27 +56,47 @@ int main() {
 - **passing arguments by value**
 	- when we initialize a *nonreference*-type variable, the value of the initializer is **copied**.
 		- changes made to the variable inside the function have no effect on the initializer.
-	- pointers are also copied and can be used normally with address arguments (but generally use pass by reference instead).
+	- pointers are also copied and can be used normally with address-type arguments (but generally use pass by reference instead).
 - **passing arguments by reference**
 	- reference parameters allow a function to change the value of corresponding arguments.
-	- using reference parameters avoids large copies.
+	- using reference parameters avoids inefficient large copies.
+		- some classes cannot be copied at all and require the use of reference parameters.
 	- reference pointers can be used to "return" multiple values from a function.
 - **const parameters and arguments**
-	- refer back to ch2 for initialization rules!
-		- recall plain reference type matching rules and top-level / low-level const rules.
+	- refer back to ch2 for general initialization rules!
+		- recall [plain reference/pointer type matching rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) and [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
 	- **reference parameters that are not changed inside a function should be *references to const*.**
 		- using a plain reference type parameter not only misleads the function caller, but also greatly limits the type of arguments that can be passed in! (can't pass const, literal, or any object that requires conversion)
 - array parameters
-	- recall from ch3 that we cannot copy an array, and when we use an array it's usually converted to a pointer.
-	- k
+	- recall from ch3 that we cannot "copy" an array, and when we use an array it usually decays into a pointer.
+		- [run-down of what actually happens when we pass arrays into functions (array-to-pointer decay), as well as how to pass arrays by reference](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay)
+		-  when we aren't sure of size or want size flexibility, we can add an additional parameter representing size.
+			- or just get rid of the array parameter and pass in pointers returned by *begin(myArray)* and *end(myArray)* from the *iterator* library header (standard library convention).
+			- or use templates (ch16)
+- passing arguments to main
+	- main can take two optional parameters:
+		- *int argc* representing the number of command-line arguments (program arguments + 1)
+		- *char &ast;&ast;argv* representing an array of pointers to C-style character strings storing the command-line arguments.
+			- the first element (index 0) in *argv* points to the name of the program or the empty string, the rest point to the program CL arguments.
+- functions with varying number of parameters, all of the same type
+	- we can pass a library template type called ***initializer_list*** defined in the library header of the same name.
+		- elements in an initializer_list are always const.
+		- copying or assigning initializer_list's to each other results in both the original and the copy sharing the elements.
+		- initializer_list has standard member functions size(), begin(), and end().
+	- we must use curly braces around the argument sequence of values we pass into an initializer_list parameter.
+	- functions with an initializer_list parameter can still have other parameters.
+	- we can use a range-for on initializer_list (as with all types that have *begin* and *end* iterators).
+
 
 ### misc conventions and tips
-- C programmers often use pointer parameters to access objects outside a function. C++ programmers generally use reference parameters instead.
+- C programmers might often use pointer parameters to access objects outside a function. C++ programmers generally use reference parameters instead.
 - [pass by reference to const vs pass by value](https://stackoverflow.com/questions/270408/is-it-better-in-c-to-pass-by-value-or-pass-by-constant-reference)
+- see ch16 for functions with parameters whose type might vary (variadic templates).
 
-## basics (6.1)
+## *return* (6.2)
 
 ### new core ideas
+- 
 
 ### misc conventions and tips
 
