--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -18,7 +18,7 @@
 		- default initialized if no initializer (to undefined if built-in type).
 		- parameters are also automatic objects.
 	- a ***local static object*** (a local variable with keyword *static*) persists until the program terminates.
-		- initialized before the first time execution passes through the object's definition.
+		- initialized *before* the first time execution passes through the object's definition.
 		- value initialized if no initializer (to zero if built-in type).
 		- subsequent calls ignore(?) the initialization statement because the variable already exists (initialization is not assignment!).
 ~~~
@@ -37,7 +37,7 @@ int main() {
 ~~~
 
 - function declarations
-	- aka *function prototype*
+	- aka ***function prototype***
 	- a function may only be defined once but can be declared multiple times (like variables)
 	- a function declaration is just like a function definition except the function body is replaced with a semicolon
 		- parameter names are not required, but can help users of the function understand what the function does.
@@ -87,32 +87,107 @@ int main() {
 	- functions with an initializer_list parameter can still have other parameters.
 	- we can use a range-for on initializer_list (as with all types that have *begin* and *end* iterators).
 
-
 ### misc conventions and tips
 - C programmers might often use pointer parameters to access objects outside a function. C++ programmers generally use reference parameters instead.
 - [pass by reference to const vs pass by value](https://stackoverflow.com/questions/270408/is-it-better-in-c-to-pass-by-value-or-pass-by-constant-reference)
 - see ch16 for functions with parameters whose type might vary (variadic templates).
 
+
 ## *return* (6.2)
 
 ### new core ideas
-- 
+- empty returns can be used in void functions to exit the function at an intermediate point.
+- non-void functions must return a value that is implicitly convertible to the function return type.
+- values are returned in exactly the same way variables and parameters are initialized.
+	- return value is used to initialize a temporary at the call site, and that temporary is the result of the function call.
+- functions can have a return type of a reference/pointer to something.
+	- **never return a reference or pointer to a local object.**
+	- also never directly return a literal when the function has a return type of a reference.
+		- recall local object *lifetime*!
+- reference returns are lvalues, other return types yield rvalues.
+	- we can assign to the result of a function that returns a reference to nonconst!
+- we can return a braced list of values (list-initialization) in functions with appropriate return types (like vector)
+- we cannot return an array directly, but we can return a pointer or a reference to an array.
+	- can be complicated, so ignore this functionality for now.
 
 ### misc conventions and tips
+- *csdtlib* defines two machine-independent preprocessor variables for the *main* function to indicate an exit success or failure.
 
-
-## basics (6.1)
+## overloaded functions (6.4)
 
 ### new core ideas
+- functions that have the same name and appear in the same scope but have different parameter lists are called overloaded functions.
+	- the presence of a top-level const in the parameter type is ignored and does not make a function different as to be overloaded.
+		- low-level const in the parameter type is not ignored and makes a difference.
+- *const_cast* with overloaded functions (refer to Primer)
+- names do not overload across scopes
+	- recall that if we declare a name in an inner scope, that name hides uses of that name declared in an outer scope.
+	- names that are hidden are not even considered by the compiler.
+	- **name lookup happens before type checking in C++**
 
 ### misc conventions and tips
+- don't overload function names when doing so removes information about what the function does.
 
 
-## basics (6.1)
+## other features (6.5)
 
 ### new core ideas
+- **default arguments** can be specified as initializers for parameters.
+	- if a parameter has a default argument, all the parameters that follow must also have default arguments.
+	- the default argument(s) are used when the argument(s) during a call to a function are completely omitted.
+		- callers can only omit trailing (right-side) arguments.
+	- default arguments should be specified with the function declaration in an appropriate header.
+	- names used as default arguments are resolved in the scope of the function declaration and evaluated at the time of the call.
+		- local variables may not be used as a default argument.
+- ***inline* functions** avoid function call overhead.
+	- specifying the *inline* keyword before the function return type will make the request to the compiler.
+	- meant to optimize small, straight-line functions that are called frequently.
+- ***constexpr* functions** are implicitly-*inline* functions that can be used in a [constant expression](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
+	- the return type and the type of each parameter must be a literal type (arithmetic types, references, and pointers).
+	- the function must contain exactly one return statement. 
+		- other statements must generate no actions at runtime (i.e. type aliases).
+	- **constexpr functions will only return a constant expression if its argument is a constant expression**, otherwise it just acts as a normal function.
+- debugging aids
+	- the ***assert*** preprocessor macro in the *cassert* header terminates a program if the expression it receives is false (i.e., zero).
+		- often used for checking against conditions that can "never" happen to make programs easier to debug.
+		- when the preprocessor variable ***NDEBUG*** is defined, *assert* does nothing.
+			- most compilers provide a command line option to do this as well.
+	- the C++ compiler defines a variable named \_\_func\_\_ in every function that can be used to print the name of the function.
+	- the preprocessor defines printable variables \_\_FILE\_\_; \_\_LINE\_\_; \_\_TIME\_\_; \_\_DATE\_\_; as well.
 
 ### misc conventions and tips
+- inline and constexpr functions may be defined multiple times, but all definitions must match exactly.
+	- **put inline and constexpr functions in header files!**
+- don't define your own functions named assert!
 
+
+## function matching (6.6)
+
+### new core ideas
+- aka *overload resolution*
+- when a function is called, the compiler narrows down from functions with the same name in the closest scope (*candidate functions*) to functions that have the same number of parameters and whose arguments can be convertible into corresponding parameter type (*viable functions*).
+	- details in Primer on how a "best match" is determined from the viable functions.
+
+### misc conventions and tips
+- well-designed systems avoid overloading functions with parameters that are too closely related.
+
+
+## pointers to functions (6.7)
+
+### new core ideas
+- a function's type is determined by its return type and the types of its parameters
+~~~
+// function declaration
+bool lengthCompare (const string &, const string &);
+
+// declaration of pf, which is a pointer to a function with the above type
+bool (*pf)(const string &, const string &);
+~~~
+- when we use the name of a function, the function is automatically converted to a pointer.
+	- address-of and dereference operators are unnecessary when assigning / using a pointer to a function.
+- details in Primer on using pointers to functions as parameter and return types.
+
+### misc conventions and tips
+- hi
 
 ## things to follow up on
