--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -99,7 +99,7 @@ cout << punct_cnt << '\n';
 
 ### misc conventions and tips
 - direct initialize is preferred when initializing objects with multiple values (parameters?)
-- **avoid using signed *int* variables in subscript operators *[ ]* or expressions that use *size()*.**
+- **avoid using signed *int* variables in library-overriden subscript operators *[ ]* or expressions that use *size()*.**
 - the C++ library incorporates the C library. the C++ version of C library headers are c*name* (remove the .h suffix and precede the name with the letter 'c').
 	- when we include *cctype*, we are actually including the C++ version of the C library header *ctype.h*. 
 	- using the c*name* form in C++ lets us access the C library header's namespace through *std*.
@@ -236,7 +236,7 @@ T arr[n] = {}; // zeroed array of n elements (elements are value initialized)
 		- **normally use unsigned type *size_t* from the *cstddef* header to define variables used to subscript an array.**
 	- as with strings and vectors, **remember to check that subscripts are kept in range!**
 - pointers and arrays
-	- **the compiler automatically converts the name of an array with a pointer to its first element in most expressions.**
+	- **the compiler automatically converts the name of an array to a pointer to its first element in most expressions.**
 		- **note: keep in mind array names are not *just* pointers to their first element! (see [array-to-pointer decay](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay))**
 	- pointers that address elements in an array support the same operations as *iterators* on vectors or strings.
 		- the ***iterator* header** has functions ***begin(myArray)*** and ***end(myArray)*** that take an array as an argument and return the beginning and off-the-end pointers. (C++11)
@@ -244,7 +244,7 @@ T arr[n] = {}; // zeroed array of n elements (elements are value initialized)
 - **pointer arithmetic**
 	- same operations as iterator arithmetic
 		- result of subtracting two pointers is signed integral library type *ptrdiff_t*.
-	- the *built-in* subscript operator [ ] actually operates on a pointer! (i assume the array name just decays to a pointer when the subscript operator is applied)
+	- **the *built-in* subscript operator [ ] actually operates on a pointer!** (i assume the array name just decays to a pointer when the subscript operator is applied)
 		- *p[1]* is equivalent to *&ast;(p + 1)*
 		- subscript can take negative values because of its underlying pointer arithmetic.
 - interfacing with old code or C
