--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -61,7 +61,7 @@ int main() {
 	- reference parameters allow a function to change the value of corresponding arguments.
 	- using reference parameters avoids inefficient large copies.
 		- some classes cannot be copied at all and require the use of reference parameters.
-	- reference pointers can be used to "return" multiple values from a function.
+	- references (and pointers) can be used to conceptually "return" multiple values from a function.
 - **const parameters and arguments**
 	- refer back to ch2 for general initialization rules!
 		- recall [plain reference/pointer type matching rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) and [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
@@ -104,11 +104,12 @@ int main() {
 	- **never return a reference or pointer to a local object.**
 	- also never directly return a literal when the function has a return type of a reference.
 		- recall local object *lifetime*!
-- reference returns are lvalues, other return types yield rvalues.
+- **reference returns are lvalues, other return types yield rvalues**
+	- lvalue return gives the object itself, rvalue return essentially gives a temporary copy.
 	- we can assign to the result of a function that returns a reference to nonconst!
 - we can return a braced list of values (list-initialization) in functions with appropriate return types (like vector)
 - we cannot return an array directly, but we can return a pointer or a reference to an array.
-	- can be complicated, so ignore this functionality for now.
+	- can be complicated, so im putting off trying to fully understand this for now.
 
 ### misc conventions and tips
 - *csdtlib* defines two machine-independent preprocessor variables for the *main* function to indicate an exit success or failure.
@@ -126,7 +127,7 @@ int main() {
 	- **name lookup happens before type checking in C++**
 
 ### misc conventions and tips
-- don't overload function names when doing so removes information about what the function does.
+- don't overload function names if doing so removes clarity about what the function does.
 
 
 ## other features (6.5)
